# LLM_Document_Extraction_Benchmark

./: .gitignore  README.md  accuracy.py  app.py  benchmark.py  benchmark_accuracy.xlsx  benchmark_output.xlsx  pyproject.toml
config/: invoice_config.json  resume_config.json
