[project]
name = "llm-document-extraction-benchmark"
version = "0.1.0"
description = ""
authors = [
    {name = "Shreya Soni",email = "shreyasoni2800@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pypdf (>=6.12.1,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.38.0,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "pandas (>=2.2.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
